# grapher

./: CMakeLists.txt  README.md  grapher.cpp  grapher.h  grapher.ui  inputhandler.cpp  inputhandler.h  main.cpp  todo.txt
src/: calculatorline.cpp  calculatorline.h  matrixline.cpp  matrixline.h  run.c
src/calculator/: ast.cc  ast.cpp  ast.h  ast.hh  calculator.cpp  calculator.h  functions.cc  functions.hh  lexer.cc  lexer.cpp  lexer.h  lexer.hh  parser.cc  parser.cpp  parser.h  parser.hh  run.cc  test.cc  treerotation.md
src/calculator/matrix/: matrix.cpp  matrix.h
src/calculator/util/: context.cpp  context.h  errors.h  functions.cpp  functions.h  numerical.cpp  numerical.h
src/calculus/: integrate.c
src/matrices/: matrix.hh
src/utility/: shader.c  shader.h
